--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^7.0.2",
+    "clsx": "^1.1.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
     "node-sass": "^4.13.1",
