--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-timeago": "^4.1.1",
     "@types/uuid": "^7.0.2",
     "clsx": "^1.1.0",
     "husky": "^4.2.3",
@@ -26,6 +27,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-timeago": "^4.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typescript": "~3.7.2",
