--- a/package.json
+++ b/package.json
@@ -6,31 +6,32 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@types/react": "17.x.x",
+    "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-timeago": "^4.1.1",
-    "clsx": "^1.1.0",
+    "clsx": "^1.2.1",
     "husky": "^4.2.3",
-    "letterparser": "^0.0.2",
+    "letterparser": "^0.0.10",
+    "lettersanitizer": "^1.0.4",
     "lint-staged": "^10.0.9",
-    "node-sass": "^4.13.1",
     "prettier": "^2.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
-    "react-letter": "^0.2.1",
-    "react-redux": "^7.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-letter": "^0.3.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-timeago": "^4.4.0",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "typescript": "~3.7.2",
-    "typesocket": "^1.0.0"
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.2",
+    "sass": "^1.59.3",
+    "typescript": "^5.0.2",
+    "typesocket": "^1.0.2"
   },
   "husky": {
     "hooks": {
