--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
-    "@types/react": "17.x.x",
+    "@types/react": "^18.0.30",
     "@types/react-dom": "^18.0.11",
-    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.5",
-    "@types/react-timeago": "^4.1.1",
     "clsx": "^1.2.1",
     "husky": "^4.2.3",
-    "letterparser": "^0.0.10",
+    "letterparser": "^0.0.12",
     "lettersanitizer": "^1.0.4",
     "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
@@ -24,9 +22,8 @@
     "react-icons": "^4.8.0",
     "react-letter": "^0.3.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
-    "react-timeago": "^4.4.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
     "sass": "^1.59.3",
